--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -2,6 +2,7 @@
     height:100vh;
     width:100vw;
     background-image: url('../../images/landing.jpg');
+   
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -12,7 +13,7 @@
     align-items: center;
 }
 .LandingPage_name{
- 
+    filter: blur(1px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,6 +31,7 @@
 
 }
 .LandingPage_name h1{
+    /* z-index: 3; */
     margin: auto;
     color: white;
 }
